<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TermExplorer</string>
    <string name="back_to_terminal">Back to terminal</string>
    <string name="terminal_view_desc">Terminal view</string>
    <string name="file_manager_current_path">/storage/emulated/0/</string>
    <string name="file_manager_subtitle">folder: %d file: %d usage: %s/%s</string>
    <string name="panel_left">LEFT</string>
    <string name="panel_right">RIGHT</string>
    <string name="panel_left_active">LEFT · ACTIVE</string>
    <string name="panel_right_active">RIGHT · ACTIVE</string>
    <string name="sandbox">Sandbox</string>
    <string name="sd_card">SD Card</string>
    <string name="filter_hint">Filter files…</string>
    <string name="capacity_unknown">Capacity: Unknown</string>
    <string name="empty_directory">This folder is empty</string>
    <string name="parent_directory">Parent folder</string>
    <string name="action_copy">Copy</string>
    <string name="action_move">Move</string>
    <string name="action_rename">Rename</string>
    <string name="action_delete">Delete</string>
    <string name="action_new_file">File</string>
    <string name="action_new_folder">Folder</string>

    <string name="sidebar_open">Open places sidebar</string>
    <string name="sidebar_close">Close places sidebar</string>
    <string name="sidebar_title">Places</string>
    <string name="sidebar_places">QUICK LOCATIONS</string>
    <string name="sidebar_refresh">Refresh</string>
    <string name="sidebar_swap_panels">⇄ Swap L / R</string>
    <string name="sidebar_same_both">Both → Active path</string>
    <string name="sidebar_target_left">Navigates: LEFT panel</string>
    <string name="sidebar_target_right">Navigates: RIGHT panel</string>
    <string name="sidebar_help">Places open into the currently active panel. Tap a panel first to choose the target.</string>
    <string name="place_sandbox">Sandbox</string>
    <string name="place_sdcard">SD Card</string>
    <string name="place_download">Download</string>
    <string name="place_dcim">DCIM</string>
    <string name="place_pictures">Pictures</string>
    <string name="place_documents">Documents</string>
    <string name="place_movies">Movies</string>
    <string name="place_music">Music</string>
    <string name="place_app_files">App Files</string>
    <string name="authorization_dialog_title">Permission Request</string>
    <string name="authorization_dialog_message">To access the files on your device, please manually grant "All files access" permission to MT. Click OK to enter the configuration interface, select "MT Manager" and activate the permission.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="jump_to_path_title">Jump to path</string>
    <string name="paste">Paste</string>
    <string name="file_add">Add</string>
    <string name="file_move">Move</string>
    <string name="file_delete">Delete</string>
    <string name="file_rename">Rename</string>
    <string name="file_tools">Tools</string>
    <string name="file_compress">Compress</string>
    <string name="file_properties">Properties</string>
    <string name="file_share">Share</string>
    <string name="file_open_with">Open with…</string>
    <string name="file_add_to_bookmarks">Add to bookmarks</string>
    <string name="no_login">Not logged in</string>
    <string name="storage_info_text">Folders: %1$d Files: %2$d Disk: %3$s</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
</resources>
